[gd_scene load_steps=4 format=2]

[ext_resource path="res://ItemList.gd" type="Script" id=1]
[ext_resource path="res://art/arrows.png" type="Texture" id=2]
[ext_resource path="res://art/remove.png" type="Texture" id=3]

[node name="PoseEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -398.0
margin_right = 156.0
margin_bottom = -145.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 10.0
margin_top = 33.0
margin_right = 106.0
margin_bottom = 235.0
rect_min_size = Vector2( 40, 50 )
mouse_filter = 2

[node name="ItemList" type="ItemList" parent="Panel/MarginContainer"]
margin_right = 96.0
margin_bottom = 202.0
size_flags_vertical = 3
allow_rmb_select = true
script = ExtResource( 1 )

[node name="ContextMenu" type="PopupMenu" parent="Panel/MarginContainer/ItemList"]
margin_right = 92.0
margin_bottom = 56.0
items = [ "Move to", ExtResource( 2 ), 0, false, false, 0, 0, null, "", false, "Delete", ExtResource( 3 ), 0, false, false, 1, 0, null, "", false ]
hide_on_state_item_selection = true

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 10.0
margin_right = 36.0
margin_bottom = 24.0
text = "Pose Editor"
[connection signal="item_activated" from="Panel/MarginContainer/ItemList" to="Panel/MarginContainer/ItemList" method="_on_ItemList_item_activated"]
[connection signal="item_rmb_selected" from="Panel/MarginContainer/ItemList" to="Panel/MarginContainer/ItemList" method="_on_ItemList_item_rmb_selected"]
[connection signal="focus_exited" from="Panel/MarginContainer/ItemList/ContextMenu" to="Panel/MarginContainer/ItemList" method="_on_ContextMenu_focus_exited"]
[connection signal="index_pressed" from="Panel/MarginContainer/ItemList/ContextMenu" to="Panel/MarginContainer/ItemList" method="_on_ContextMenu_index_pressed"]
